@@ -1,6 +1,7 @@
 Revision history for Perl extension XML::Xalan.
 
 Oct 25, 2001
+- Memory leak in external function plumbed!!
 - Fixed install_external_function() to save a copy of sub
 
 Oct 23, 2001
